test/types/scalar/bradc/assignUintNegative.good
assignUintNegative.chpl:3: error: Cannot assign negative value to uint
